<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/Next"
        android:orderInCategory="2"
        android:title="@string/next"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/Done"
        android:orderInCategory="2"
        android:title="@string/done"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/menu_search"
        android:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@drawable/applozic_ic_action_search"
        android:iconifiedByDefault="true"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconifiedByDefault="true"
        app:showAsAction="always" />
</menu>