<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:longClickable="true"
    android:minHeight="68dp"
    android:orientation="horizontal"
    android:paddingStart="10dp"
    android:paddingLeft="10dp"
    android:paddingTop="9dp"
    android:paddingEnd="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="9dp">

    <RelativeLayout
        android:id="@+id/profile_image_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/alphabeticImage"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/mobiframework_circular_text_view"
            android:gravity="center"
            android:text=""
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:visibility="gone" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/contactImage"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_toEndOf="@+id/alphabeticImage"
            android:layout_toRightOf="@+id/alphabeticImage"
            android:src="@drawable/applozic_group_icon"
            android:visibility="visible" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/name_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_toEndOf="@+id/profile_image_relative_layout"
        android:layout_toRightOf="@+id/profile_image_relative_layout"
        android:orientation="horizontal"
        android:paddingBottom="1dp"
        android:visibility="visible"
        android:weightSum="20">

        <TextView
            android:id="@+id/smReceivers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="22"
            android:ellipsize="end"
            android:singleLine="true"
            android:text=""
            android:textAlignment="gravity"
            android:textDirection="locale"
            android:textIsSelectable="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/createdAtTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:ellipsize="end"
            android:paddingTop="8dp"
            android:singleLine="true"
            android:text="22 Apr 08:10 AM"
            android:textColor="@color/message_details_text_color"
            android:textSize="10sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/sentOrReceivedIcon"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_below="@+id/name_time"
        android:layout_toRightOf="@+id/profile_image_relative_layout"
        android:gravity="center_vertical"
        android:visibility="gone" />


    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messageUnread"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:gravity="center_vertical"
        android:text="@string/delivery_status"
        android:textColor="@color/message_details_text_color"
        android:textSize="12sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/smTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:text="@string/testTime"
        android:textColor="@color/message_details_text_color"
        android:textIsSelectable="true"
        android:textSize="13sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/messageUnread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_time"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_toEndOf="@+id/profile_image_relative_layout"
        android:layout_toRightOf="@+id/profile_image_relative_layout"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/attachmentIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:gravity="center_vertical"
            android:src="@drawable/applozic_ic_action_attachment"
            android:visibility="gone" />

        <TextView
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/message"
            android:textAlignment="gravity"
            android:textColor="#999"
            android:textDirection="locale"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/unreadSmsCount"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="end"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/unread_message_background"
            android:gravity="center_horizontal|center_vertical"
            android:text=""
            android:textColor="@color/white"
            android:textSize="9sp"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>

    <TextView
        android:id="@+id/selfDestruct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messageUnread"
        android:layout_toEndOf="@+id/profile_image_relative_layout"
        android:layout_toRightOf="@+id/profile_image_relative_layout"
        android:text="@string/self_destruct"
        android:textColor="@color/message_details_text_color"
        android:textSize="12dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/onlineTextView"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignEnd="@+id/profile_image_relative_layout"
        android:layout_alignRight="@+id/profile_image_relative_layout"
        android:layout_alignBottom="@+id/profile_image_relative_layout"
        android:layout_gravity="start|top"
        android:background="@drawable/online_circle"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="gone" />

</RelativeLayout>